@@ -1,5 +1,5 @@
 /*
- * $Id: c_controlmisc.c,v 1.26 2006-02-26 05:41:35 guerra000 Exp $
+ * $Id: c_controlmisc.c,v 1.27 2006-02-26 05:51:43 guerra000 Exp $
  */
 /*
  * ooHG source code:
@@ -91,12 +91,14 @@
 	Copyright 1999-2003, http://www.harbour-project.org/
 ---------------------------------------------------------------------------*/
 
+/*
 #ifndef __XHARBOUR__
    #if !defined( _HB_API_INTERNAL_ )
       #define _HB_API_INTERNAL_
    #endif
    #define hb_dynsymSymbol( pDynSym )  ( pDynSym )->pSymbol
 #endif
+*/
 
 #define _WIN32_IE      0x0500
 #define HB_OS_WIN_32_USED
